# OpenSnake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
src/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  Food.cpp  Food.hpp  Grid.cpp  Grid.hpp  Snake.cpp  Snake.hpp  game.cpp  game.hpp  main.cpp
